Complete EP-3 streaming integrity pipeline